# dotfiles2

./: .gitignore  .tmux.conf  .vimrc  Brewfile  Brewfile.lock.json  Pipfile  README.md  bashrc  brew_list  functions.zsh  gitconfig  gitconfig.work  gitignore_global  gruvbox-revised.itermcolors  hgignore  hgrc  ideavimrc  jshintrc  obsidian.vimrc  poetry.lock.orig  pyproject.toml  pythonrc  requirements.txt  requirements.txt.orig  setup.sh  tmux.conf  zimrc  zprofile  zshrc
coc/: commands  history.json  memos.json  snippets-mru
coc/extensions/: db.json  package.json
config/fontforge/: prefs
config/octave/: qt-settings
config/powerline/: config.json
config/tortoisehg.org/: TortoiseHgQt.ini  thg-reporegistry.xml
ipython/profile_default/: history.sqlite  ipython_config.py  ipython_kernel_config.py
lein/: repl-history
nvim/: coc-settings.json  coc-settings.json.bak  init.vim  lspsaga.vim  mappings.vim
nvim/lua/: autocmds.lua  mappings.lua  plugins.lua
nvim/myUltiSnips/: html.snippets  jinja.snippets  python.snippets  vue.snippets
nvim/neovim2/: Pipfile
nvim/neovim3/: Pipfile
nvim/settings/: airline.vim  ale.vim  behaviour.vim  coc.vim  deoplete.vim  folding.vim  fzf.vim  gitgutter.vim  go.vim  language_server.vim  mundo.vim  ncm2.vim  python.vim  signify.vim  slimux.vim  snippets.vim  tagbar.vim  vista.vim
nvim2/: cmp.lua  completion.vim  init.vim  lspconfig.lua  lualine.lua  maps.vim  nvim3  plugins.lua  telescope.vim  treesitter.lua
nvim3/: init.lua  lspconfig.lua  treesitter.lua
vim/: .netrwhist  vimrc
zinit/: zshrc
(+26 files in other folders)
