[tool.poetry]
name = "dotfiles"
version = "0.1.0"
description = ""
authors = ["Gideon VanRiette <gvanriette@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
python-language-server = {extras = ["all"], version = "^0.31.4"}
black = "^19.10b0"
virtualenv = "^20.0.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
