[tool.poetry]
name = "dotfiles"
version = "0.1.0"
description = ""
authors = ["Gideon VanRiette <gvanriette@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
# pipenv = {version = "^2020.4.1-beta.1", allow-prereleases = true}
# python-language-server = {extras = ["all"], version = "^0.31.10"}
black = "^19.10b0"
virtualenv = "^20.0.18"
pynvim = "*"
isort = "^4.3.21"
flake8 = "^3.8.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
