[tool.poetry]
name = "dotfiles"
version = "0.1.0"
description = ""
authors = ["Gideon VanRiette <gvanriette@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
# pipenv = {version = "^2020.4.1-beta.1", allow-prereleases = true}
# python-language-server = {extras = ["all"], version = "^0.31.10"}
black = "*"
virtualenv = "^20.0.18"
pynvim = "*"
isort = "*"
flake8 = "^3.8.3"
Jinja2 = "^2.11.2"
appnope = "^0.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
